force-app/main/default/objects/Credit_Memo__c/Credit_Memo__c.object-meta.xml
<CustomObject>
    <description>This is a custom object for storing information about a voucher to be printed</description>
    <label>Credit​ ​Memo</label>
    <nameField>
        <displayFormat>CM-{0000}</displayFormat>
        <label>Credit​ ​Memo Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Credit​ ​Memos</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>