force-app/main/default/objects/Credit_Memo__c/fields/Background_Image__c.field-meta.xml
<CustomField>
    <fullName>Background_Image__c</fullName>
    <description>This a link to the file which can be used to override the default background image of pdf.</description>
    <inlineHelpText>To link a necessary background image to this record put here the file&#39;s Unit Title value.</inlineHelpText>
    <label>Background Image</label>
    <length>255</length>
    <type>Text</type>
</CustomField>