force-app/main/default/objects/Credit_Memo__c/fields/Background_Image_Url__c.field-meta.xml
<CustomField>
    <fullName>Background_Image_Url__c</fullName>
    <label>Background Image Url</label>
    <type>Url</type>
</CustomField>