force-app/main/default/objects/Credit_Memo__c/fields/Exclusively_For__c.field-meta.xml
<CustomField>
    <fullName>Exclusively_For__c</fullName>
    <label>Exclusively​ ​For</label>
    <length>255</length>
    <type>Text</type>
</CustomField>