force-app/main/default/objects/Credit_Memo__c/fields/is_Expired__c.field-meta.xml
<CustomField>
    <fullName>is_Expired__c</fullName>
    <formula>TODAY() &gt;  Credit_Expiry_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>is Expired ?</label>
    <type>Checkbox</type>
</CustomField>