force-app/main/default/objects/Credit_Memo__c/fields/Note__c.field-meta.xml
<CustomField>
    <fullName>Note__c</fullName>
    <defaultValue>$Setup.Credit_Memo_Config__c.Note_Default_Value__c</defaultValue>
    <description>This a field for saving Ts and Cs for the voucher</description>
    <inlineHelpText>Please use a dot sign at the beginning of the line to mark the line as a separate list item.</inlineHelpText>
    <label>Note</label>
    <type>TextArea</type>
</CustomField>