force-app/main/default/objects/Credit_Memo__c/fields/Pdf_Text_Color_Hex__c.field-meta.xml
<CustomField>
    <fullName>Pdf_Text_Color_Hex__c</fullName>
    <description>This is a field for overriding the default Voucher Pdf text color</description>
    <inlineHelpText>To override default white text color on odf rendering please specify color in HEX format</inlineHelpText>
    <label>Pdf Text Color Hex</label>
    <length>7</length>
    <type>Text</type>
</CustomField>